syntax = "proto3";

package mnemonics;

import "commons.proto";
import "google/protobuf/empty.proto";

message GeneratePhraseResponse {
  string mnemonicPhrase = 1;
}

message RegisterMnemonicPhraseRequest {
  string userId = 1;
  string mnemonicPhrase = 2;
}

message RegisterMnemonicPhraseResponse {
  string id = 1;
  string userId = 2;
  string mnemonicPhrase = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message GetMnemonicPhraseListRequest {
  string userId = 1;
  int32 skip = 2;
  int32 limit = 3;
}

message GetMnenomicPhraseRequest {
  string id = 1;
}

message GetMnemonicPhraseListResponse {
  repeated commons.MnemonicPhraseInstance data = 1;
  int32 total = 2;
  int32 skip = 3;
  int32 limit = 4;
}

message SeedMnemonicPhraseRequest {
  string userId = 1;
}

service MnemonicService {
  rpc GenerateMnemonicPhrase(google.protobuf.Empty) returns (GeneratePhraseResponse) {}
  rpc RegisterMnemonicPhrase(RegisterMnemonicPhraseRequest) returns (RegisterMnemonicPhraseResponse) {}
  rpc GetMnemonicPhraseList(GetMnemonicPhraseListRequest) returns (GetMnemonicPhraseListResponse) {}
  rpc GetMnemonicPhrase(GetMnenomicPhraseRequest) returns (commons.MnemonicPhraseInstance) {}
  rpc GetLatestMnemonicPhrase(google.protobuf.Empty) returns (commons.MnemonicPhraseInstance) {}
  rpc SeedMnemonicPhrase(SeedMnemonicPhraseRequest) returns (RegisterMnemonicPhraseResponse) {}
}